--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
-    "node-cron": "^2.0.3"
+    "node-cron": "^2.0.3",
+    "node-localdb": "^0.0.3"
   }
 }
